--- a/package.json
+++ b/package.json
@@ -8,21 +8,31 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "@types/jest": "^27.5.2",
+    "@types/lodash": "^4.14.191",
     "@types/node": "^16.18.18",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
+    "@types/react-measure": "^2.0.8",
     "axios": "^1.3.4",
     "change-case": "^4.1.2",
+    "chartjs-plugin-datalabels": "^2.2.0",
+    "eqcss": "^1.9.2",
     "javascript-time-ago": "^2.5.9",
+    "lodash": "^4.17.21",
     "react": "^18.2.0",
+    "react-avatar": "^5.0.3",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "react-grid-layout": "^1.3.4",
     "react-hook-form": "^7.43.8",
     "react-icons": "^4.8.0",
     "react-loader-spinner": "^4.0.0",
+    "react-measure": "^2.5.2",
     "react-query": "^3.39.3",
+    "react-range": "^1.8.14",
     "react-router-dom": "^6.9.0",
     "react-scripts": "5.0.1",
+    "react-select": "^5.7.2",
     "sass": "^1.60.0",
     "typescript": "^4.9.5",
     "use-react-router-breadcrumbs": "^4.0.1",
@@ -56,5 +66,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/react-grid-layout": "^1.3.2"
   }
 }
