--- a/package.json
+++ b/package.json
@@ -3,7 +3,6 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@secureailabs/web-ui": "file:../web-ui/dist",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -23,6 +22,7 @@
     "react-avatar": "^5.0.3",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
+    "react-dropzone": "^14.2.3",
     "react-grid-layout": "^1.3.4",
     "react-hook-form": "^7.43.8",
     "react-icons": "^4.8.0",
