--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react-router-dom": "^6.9.0",
     "react-scripts": "5.0.1",
     "react-select": "^5.7.2",
+    "react-table": "^7.8.0",
     "sass": "^1.60.0",
     "typescript": "^4.9.5",
     "use-react-router-breadcrumbs": "^4.0.1",
@@ -68,6 +69,7 @@
     ]
   },
   "devDependencies": {
-    "@types/react-grid-layout": "^1.3.2"
+    "@types/react-grid-layout": "^1.3.2",
+    "@types/react-table": "^7.7.14"
   }
 }
