--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "eject": "react-scripts eject",
     "pretty": "prettier --write \"./**/*.{js,jsx,ts,tsx,json}\"",
     "build_container": "docker build -t user-portal .",
+    "generate-client": "openapi --input openapi.json --output ./src/client --client axios",
     "run_container": "docker run -it -rm --name userportal -p 3000:3000 -v $(pwd):/app userportal",
     "attach_container": "docker exec -it userportal /bin/bash"
   },
@@ -74,6 +75,7 @@
     "@types/react-table": "^7.7.14",
     "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-prettier": "^4.2.1",
+    "openapi-typescript-codegen": "^0.23.0",
     "prettier": "^2.8.7"
   }
 }
