--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "eqcss": "^1.9.2",
     "javascript-time-ago": "^2.5.9",
     "lodash": "^4.17.21",
+    "papaparse": "^5.4.1",
     "react": "^18.2.0",
     "react-avatar": "^5.0.3",
     "react-chartjs-2": "^5.2.0",
@@ -74,6 +75,7 @@
     ]
   },
   "devDependencies": {
+    "@types/papaparse": "^5.3.7",
     "@types/react-grid-layout": "^1.3.2",
     "@types/react-table": "^7.7.14",
     "eslint-config-prettier": "^8.8.0",
