--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,11 @@
 {
   "compilerOptions": {
     "target": "es5",
-    "lib": ["dom", "dom.iterable", "esnext"],
+    "lib": [
+      "dom",
+      "dom.iterable",
+      "esnext"
+    ],
     "allowJs": true,
     "skipLibCheck": true,
     "esModuleInterop": true,
@@ -17,6 +21,11 @@
     "jsx": "react-jsx",
     "baseUrl": "."
   },
-  "include": ["src/index.d.ts", "src"],
-  "exclude": ["node_modules"]
+  "include": [
+    "src/index.d.ts",
+    "src"
+  ],
+  "exclude": [
+    "node_modules"
+  ]
 }
