--- a/package.json
+++ b/package.json
@@ -51,7 +51,8 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "pretty": "prettier --write \"./**/*.{js,jsx,ts,tsx,json}\"",
-    "build_container": "docker build -t user-portal .",
+    "build_image": "./scripts.sh build_image userportal",
+    "push_image": "./scripts.sh push_image_to_registry userportal",
     "generate-client": "openapi --input openapi.json --output ./src/client --client axios",
     "generate-dataset-upload-client": "openapi --input openapi.json --output ./src/datasetUpload --client axios",
     "run_container": "docker run -it -rm --name userportal -p 3000:3000 -v $(pwd):/app userportal",
